# SparseKV

./: CLAUDE.md  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml
adasparse/: __init__.py
adasparse/evaluation/: __init__.py  evaluate.py  sparsity.py  stability.py
adasparse/presses/: __init__.py  adaptive_dropout_press.py  eviction_aug_press.py  sentence_dropout_press.py  soft_threshold_press.py  sparse_reg_press.py
adasparse/training/: __init__.py  curriculum.py  data.py  objectives.py  train.py  trainer.py
adasparse/utils/: attention.py  visualization.py
configs/eval/: baseline.yaml  full_eval.yaml
configs/train/: adaptive_dropout_8b.yaml  block_dropout_1b.yaml  block_dropout_8b.yaml  mixed_training_8b.yaml
docs/: experiment_plan.md  server_setup.md
scripts/: analyze_attention.py  eval_baseline.py  eval_baseline.sh  eval_trained.sh  eval_wrapper.py  run_all.sh  slurm_analyze.sh  slurm_phase0_analyze.sh  slurm_phase1_gpt_oss.sh  slurm_phase1_llama8b.sh  slurm_phase1_qwen1.5b.sh  slurm_phase1_qwen3_8b.sh  slurm_phase2_train_llama.sh  slurm_phase2_train_qwen.sh  slurm_phase3_eval_trained.sh  submit_all.sh  train.sh  train_eit.py  train_sparsekv.py
sparsekv/: __init__.py
sparsekv/evaluation/: __init__.py  evaluate.py  sparsity.py
sparsekv/presses/: __init__.py  block_dropout_press.py  variable_block_press.py
sparsekv/training/: __init__.py  anchor.py  attention_hook.py  data.py  eit_trainer.py  eviction_sim.py  kv_dropout.py  loss.py  objectives.py  scheduler.py  train.py  trainer.py
sparsekv/utils/: visualization.py
tests/: test_presses.py
